RESOLVED FIXED299195
REGRESSION(300214@main): [macOS Debug] compositing/visible-rect/flipped-preserve-3d.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=299195
Summary REGRESSION(300214@main): [macOS Debug] compositing/visible-rect/flipped-prese...
Marta Darbinyan
Reported 2025-09-19 11:23:12 PDT
The following test is a flaky crash on macOS Debug. compositing/visible-rect/flipped-preserve-3d.html Errors: 0x300259498 WTF::SingleThreadIntegralWrapper<unsigned int>::assertThread() const 2 0x300284dd8 WTF::SingleThreadIntegralWrapper<unsigned int>::operator unsigned int() const 3 0x300284d68 WTF::WeakPtrImplBaseSingleThread<WTF::SingleThreadWeakPtrImpl>::deref() const 4 0x300284d3c WTF::DefaultRefDerefTraits<WTF::SingleThreadWeakPtrImpl>::derefIfNotNull(WTF::SingleThreadWeakPtrImpl*) 5 0x300284f8c WTF::RefPtr<WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::SingleThreadWeakPtrImpl>>::~RefPtr() 6 0x3002846c8 WTF::RefPtr<WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::SingleThreadWeakPtrImpl>>::~RefPtr() 7 0x3002850c8 WTF::WeakPtr<WebCore::Font const, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>::~WeakPtr() 8 0x300283d78 WTF::WeakPtr<WebCore::Font const, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>::~WeakPtr() 9 0x303aa7ca0 WebCore::DrawGlyphsRecorder::~DrawGlyphsRecorder() 10 0x303a9aacc WebCore::DrawGlyphsRecorder::~DrawGlyphsRecorder() 11 0x306ffde8c std::__1::default_delete<WebCore::DrawGlyphsRecorder>::operator()[abi:sn190102](WebCore::DrawGlyphsRecorder*) const 12 0x306ffde08 std::__1::unique_ptr<WebCore::DrawGlyphsRecorder, std::__1::default_delete<WebCore::DrawGlyphsRecorder>>::reset[abi:sn190102](WebCore::DrawGlyphsRecorder*) 13 0x306ffdd98 std::__1::unique_ptr<WebCore::DrawGlyphsRecorder, std::__1::default_delete<WebCore::DrawGlyphsRecorder>>::~unique_ptr[abi:sn190102]() 14 0x306ff71d4 std::__1::unique_ptr<WebCore::DrawGlyphsRecorder, std::__1::default_delete<WebCore::DrawGlyphsRecorder>>::~unique_ptr[abi:sn190102]() 15 0x306ff716c WebCore::DisplayList::Recorder::~Recorder() 16 0x11a3bc1d4 WebKit::RemoteGraphicsContextProxy::~RemoteGraphicsContextProxy() 17 0x11a3bc284 WebKit::RemoteGraphicsContextProxy::~RemoteGraphicsContextProxy() 18 0x11a42ab90 std::__1::__optional_destruct_base<WebKit::RemoteGraphicsContextProxy, false>::~__optional_destruct_base[abi:sn190102]() 19 0x11a42ab4c std::__1::__optional_storage_base<WebKit::RemoteGraphicsContextProxy, false>::~__optional_storage_base() 20 0x11a42ab20 std::__1::__optional_copy_base<WebKit::RemoteGraphicsContextProxy, false>::~__optional_copy_base() 21 0x11a42aaf4 std::__1::__optional_move_base<WebKit::RemoteGraphicsContextProxy, false>::~__optional_move_base() 22 0x11a42aac8 std::__1::__optional_copy_assign_base<WebKit::RemoteGraphicsContextProxy, false>::~__optional_copy_assign_base() 23 0x11a42aa9c std::__1::__optional_move_assign_base<WebKit::RemoteGraphicsContextProxy, false>::~__optional_move_assign_base() 24 0x11a42aa70 std::__1::optional<WebKit::RemoteGraphicsContextProxy>::~optional() 25 0x11a3d2014 std::__1::optional<WebKit::RemoteGraphicsContextProxy>::~optional() 26 0x11a3d1f7c WebKit::RemoteImageBufferSetProxy::~RemoteImageBufferSetProxy() 27 0x11a3d2040 WebKit::RemoteImageBufferSetProxy::~RemoteImageBufferSetProxy() 28 0x11a3d206c WebKit::RemoteImageBufferSetProxy::~RemoteImageBufferSetProxy() 29 0x11754a2b4 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<IPC::WorkQueueMessageReceiver<(WTF::DestructionThread)0>, (WTF::DestructionThread)0>() const::'lambda'()::operator()() const 30 0x11754a164 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<IPC::WorkQueueMessageReceiver<(WTF::DestructionThread)0>, (WTF::DestructionThread)0>() const 31 0x117549f40 WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<IPC::WorkQueueMessageReceiver<(WTF::DestructionThread)0>, (WTF::DestructionThread)0>::deref() const com.apple.WebKit.WebContent.Development terminated (pid 1297) for reason: crash Test history: https://results.webkit.org/?style=debug&suite=layout-tests&test=compositing%2Fvisible-rect%2Fflipped-preserve-3d.html Test result: https://ews-build.webkit.org/#/builders/122/builds/37014
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-19 11:23:39 PDT
EWS
Comment 2 2025-09-19 12:01:31 PDT
Test gardening commit 300250@main (c1babb179cea): <https://commits.webkit.org/300250@main> Reviewed commits have been landed. Closing PR #51025 and removing active labels.
Chris Dumez
Comment 3 2025-09-19 18:34:28 PDT
EWS
Comment 4 2025-09-20 17:56:09 PDT
Committed 300289@main (afa0df42cd3a): <https://commits.webkit.org/300289@main> Reviewed commits have been landed. Closing PR #51048 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.